change selected langauge index

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -233,7 +233,7 @@
     function _render() {
         var lang = getLang()
         // en
-        if (lang == "en") {
+        if (lang == "zh") {
             $select.selectedIndex = 1;
             $en.style.display = "block";
             $en.classList.add("active");
